<resources>
    <string name="app_name">MyDesck</string>
    <!-- Menu Draver Strings -->
    <string name="ad_cat1">Обьявления</string>
    <string name="ad_me_ads">Мои обьявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphones">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ad_sing_up">Регистрация</string>
    <string name="ad_sing_in">Вход</string>
    <string name="ad_sing_out">Выход</string>
    <string name="open">Open</string>
    <string name="not_reg">Войдите или зарегестрируйтесь!</string>
    <string name="close">Close</string>
    <!-- Sing Dialog -->
    <string name="email_hint">Email</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="password_hint">Password</string>
    <string name="ad_sing_up_action">Войти</string>
    <string name="ad_sing_in_action">Зарестрироваться</string>
    <string name="sing_up_error">Неудалось зарегестрироваться!</string>
    <string name="send_verification_email_error">Неудалось отправить email для потверждения! </string>
    <string name="send_verification_done">На вашу почту была отправвлена ссылка для потверждения вашего аккаунтаб пожалуйста подтвердите ваш аккаунт! </string>
    <string name="sing_in_error">Неудалось войти!</string>
    <string name="dialog_reset_email_message">Для востановления пароля укажите ваш Email адресс!</string>
    <string name="email_reset_password_was_sent">Электронное письмо для сброса было отправлено!</string>
    <string name="default_web_client_id" translatable="false">658702966140-2f9bqkhec6sif08s897t65kqu3mvs7i5.apps.googleusercontent.com</string>
    <!-- Sing Dialog -->
    <string name="link_done">Email успешно поключен к Google аккаунту!</string>
    <string name="not">У вас уже есть аккаунт с этим Email адресом войдите по нему!</string>
    <string name="noResult">No result</string>
    <!-- Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="noCountrySelected">No country selected</string>
    <string name="loading">Loading</string>
    <string name="city">Город</string>
    <string name="country">Страна</string>
    <string name="index">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>

    <string name="adId">ca-app-pub-3940256099942544/9214589741</string>
    <string name="ad_iner_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Цена</string>
    <string name="discription">Описание</string>
    <string name="discription_hint">*Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="publish">Опубликовать</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Название обьявления</string>

    <!-- Add list item -->
    <string name="price_desc">Цена:</string>
    <string name="fev">Разное</string>
    <string name="guest">Гость</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="timePublish">Время публикации</string>
    <string name="thanks">Спасибо за покупку!</string>
    <string name="canseled">Не удалось совершить покупку!</string>
    <string name="remove_ads">Удалить рекламу</string>
    <string name="sing_in_done">Sing in done!</string>
    <string name="as_a_Guest">Вы вошли как гость!</string>
    <string name="not_as_a_Guest">Вам не удалось войти как гость!</string>
    <string name="failed_app">Ошибка: Подходящее приложение не найдено!</string>
    <string name="open_with">Открыть с помощью!</string>
    <string name="select_the_images_to_upload">Выберите изображения для загрузки</string>

</resources>