<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <item android:title="@string/ad_cat1" android:id="@+id/adsCat">
    <menu>
        <item
            android:title="@string/ad_me_ads"
            android:id="@+id/id_my_ads"/>
        <item
            android:title="@string/ad_car"
            android:id="@+id/id_car"/>
        <item
            android:title="@string/ad_pc"
            android:id="@+id/id_pc"/>
        <item
            android:title="@string/ad_smartphones"
            android:id="@+id/id_smartphones"/>
        <item
            android:title="@string/ad_dm"
            android:id="@+id/id_dm"/>
    </menu>
    </item>

    <item
        android:title="@string/ad_cat2" android:id="@+id/acCat">
<menu>
    <item
        android:title="@string/remove_ads"
        android:id="@+id/id_remove_ads"/>
    <item
        android:title="@string/ad_sing_up"
        android:id="@+id/id_sing_up"/>
    <item
        android:title="@string/ad_sing_in"
        android:id="@+id/id_sing_in"/>
    <item
        android:title="@string/ad_sing_out"
        android:id="@+id/is_sing_out"/>
</menu>
    </item>

</menu>